--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body {
 .hero-title {
   color: rgba(255, 255, 255, 1);
   background-color: rgba(47, 48, 58, 1);
-  font-family: "Roboto";
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -69,13 +69,52 @@ body {
 }
 
 /* ----- Блок Особенности -----*/
-.qualities-title {
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
-.qualities-list {
+
+.qualities-sec-title {
+  color: rgba(33, 33, 33, 1);
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.qualities-text {
+  color: rgba(117, 117, 117, 1);
+
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+}
+/* --- Блок Чем мы занимаемся--- */
+.dealing-title {
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+/* ------- добавить про фото? ----*/
+/* -------Блок Наша команда-------*/
+.team {
+}
+.team-title {
+}
+.team-list {
 }
 .list {
 }
-.qualities-sec-title {
+.team-sec-title {
 }
-.qualities-text {
+.team-text {
 }
