--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  color: rgba(255, 255, 255, 1);
 }
 
 .hero-btn {
